--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha -w"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/FermiDirak/CalculusBuddy#readme",
   "devDependencies": {
-    "nodemon": "^1.14.11"
+    "mocha": "^5.0.0",
+    "nodemon": "^1.14.11",
+    "should": "^13.2.1"
   }
 }
