--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculusbuddy",
+  "name": "symbolic-calculus",
   "version": "0.1.0",
   "description": "Solves Calculus based equations",
   "main": "index.js",
