--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "symbolic-calculus",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Solves Calculus based equations",
-  "main": "src/index.ts",
+  "main": "build/index.js",
   "scripts": {
-    "test": "jest",
     "start": "nodemon --exec ./node_modules/.bin/ts-node -- src/index.ts",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "build": "tsc",
-    "build-continuous": "tsc -w"
+    "build-continuous": "tsc --watch"
   },
   "repository": {
     "type": "git",
